Prevent vertical stretch

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1084,6 +1084,7 @@ button,
 
   .squads-modal-container .squads-list img {
     width: 100%;
-    height: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: contain;
   }
 }
